画像スクロール作成

--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -6,35 +6,35 @@
     .heading
       %h2 ゲームジャンルの一例
     .genre
-      %ul.game
-        %li.game-img1
+      .game
+        .game-img
           %a{:href => "http://www.capcom.co.jp/monsterhunter/world/", :target => "_blank"}
             = image_tag asset_path("MHWIB.png", alt: "ゲーム画像1")
-        %li.game-img2
+        .game-img
           %a{:href => "https://www.callofduty.com/ja/", :target => "_blank"}
             = image_tag asset_path("sekiro.jpg", alt: "ゲーム画像2")
-        %li.game-img3
+        .game-img
           %a{:href => "https://playoverwatch.com/ja-jp/", :target => "_blank"}
             = image_tag asset_path("Overwatch.jpg", alt: "ゲーム画像3")
-        %li.game-img4
+        .game-img
           %a{:href => "https://www.jp.playstation.com/games/dead-by-daylight-ps4/", :target => "_blank"}
             = image_tag asset_path("DBD.jpg", alt: "ゲーム画像4")
-        %li.game-img5
+        .game-img
           %a{:href => "https://www.epicgames.com/fortnite/ja/home", :target => "_blank"}
             = image_tag asset_path("fortnite.jpg", alt: "ゲーム画像5")
-        %li.game-img6
+        .game-img
           %a{:href => "https://www.minecraft.net/ja-jp/", :target => "_blank"}
             = image_tag asset_path("minecraft.jpg", alt: "ゲーム画像6")
-        %li.game-img7
+        .game-img
           %a{:href => "https://www.ea.com/ja-jp/games/apex-legends", :target => "_blank"}
             = image_tag asset_path("Apex.jpg", alt: "ゲーム画像7")
-        %li.game-img8
+        .game-img
           %a{:href => "http://pubg.dmm.com/", :target => "_blank"}
             = image_tag asset_path("six.jpg", alt:"ゲーム画像8")
-        %li.game-img9
+        .game-img
           %a{:href => "https://www.smashbros.com/ja_JP/", :target => "_blank"}
             = image_tag asset_path("suma.png", alt: "ゲーム画像9")
-        %li.game-img10
+        .game-img
           %a{:href => "https://www.nintendo.co.jp/switch/aab6a/index.html", :target => "_blank"}
             = image_tag asset_path("splatoon.jpg", alt: "ゲーム画像10")
 %section.index
