--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -11,7 +11,7 @@
           %a{:href => "http://www.capcom.co.jp/monsterhunter/world/", :target => "_blank"}
             = image_tag asset_path("MHWIB.png", alt: "ゲーム画像1")
         .game-img
-          %a{:href => "https://www.callofduty.com/ja/", :target => "_blank"}
+          %a{:href => "https://www.sekiro.jp/", :target => "_blank"}
             = image_tag asset_path("sekiro.jpg", alt: "ゲーム画像2")
         .game-img
           %a{:href => "https://playoverwatch.com/ja-jp/", :target => "_blank"}
@@ -29,7 +29,7 @@
           %a{:href => "https://www.ea.com/ja-jp/games/apex-legends", :target => "_blank"}
             = image_tag asset_path("Apex.jpg", alt: "ゲーム画像7")
         .game-img
-          %a{:href => "http://pubg.dmm.com/", :target => "_blank"}
+          %a{:href => "https://ubisoft.co.jp/r6s/", :target => "_blank"}
             = image_tag asset_path("six.jpg", alt:"ゲーム画像8")
         .game-img
           %a{:href => "https://www.smashbros.com/ja_JP/", :target => "_blank"}
