楽天商品検索
楽天APIによる商品検索機能

--- a/app/views/component/_header.html.haml
+++ b/app/views/component/_header.html.haml
@@ -9,6 +9,7 @@
     %li.header-contents__content
       新規投稿
     %li.header-contents__content
-      アマゾン検索
+      = link_to rakuten_search_review_index_path do
+        楽天検索
     %li.header-contents__content
       ログアウト
