--- a/app/views/component/_header.html.haml
+++ b/app/views/component/_header.html.haml
@@ -5,14 +5,16 @@
   -if user_signed_in?
     %ul.header-contents
       %li.header-contents__content
-        ユーザー様
+        = link_to user_path(current_user) do
+          = current_user.name
       %li.header-contents__content
         新規投稿
       %li.header-contents__content
-        = link_to rakuten_search_review_index_path do
+        = link_to rakuten_search_reviews_path do
           楽天検索
       %li.header-contents__content
-        ログアウト
+        = link_to destroy_user_session_path, method: :delete do
+          ログアウト
   -else
     %ul.header-contents
       %li.header-contents__content
