--- a/app/assets/stylesheets/component/_header.scss
+++ b/app/assets/stylesheets/component/_header.scss
@@ -1,6 +1,6 @@
 .header {
   width:100%;
-  height: 100px;
+  height: 80px;
   color:white;
   background-color: cyan;
   font-size: 24px;
@@ -14,6 +14,7 @@
     padding-left:480px;
     &__content{
       padding:16px;
+      line-height: 80px;
     }
   }
 }
