--- a/app/views/youtubes/index.html.haml
+++ b/app/views/youtubes/index.html.haml
@@ -1,5 +1,5 @@
-.container-fluid
-  .header
+.container
+  .youtube
     = form_with(url: youtubes_index_path, local: true, method: :get, class: "search-form") do |form|
       .row.justify-content-center
         %i.fab.fa-youtube.col-1
