--- a/app/views/component/_header.html.haml
+++ b/app/views/component/_header.html.haml
@@ -8,8 +8,10 @@
         = link_to user_path(current_user) do
           = current_user.name
       %li.header-contents__content
+        新規投稿
+      %li.header-contents__content
         = link_to youtubes_index_path do
-          新規投稿
+          youtube検索
       %li.header-contents__content
         = link_to rakuten_search_reviews_path do
           楽天検索
