--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,4 +41,8 @@
   </div>
 <% end %>
 
+  <%= user_twitter_omniauth_authorize_path  do %>
+    Twitterログイン
+  <%end%>
+
 <%= render "devise/shared/links" %>
