--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -5,6 +5,14 @@
   .container
     .heading
       %h2 ゲームジャンルの一例
+    %ul
+    - if user_signed_in?
+      %li= current_user.name
+      %li= current_user.nickname
+      %li= current_user.location
+      %li= link_to "ログアウト", destroy_user_session_path, method: :delete
+    - else
+      %li= link_to "ログイン", new_user_session_path
     .genre
       .game
         .game-img
