--- a/app/views/component/_header.html.haml
+++ b/app/views/component/_header.html.haml
@@ -8,7 +8,8 @@
         = link_to user_path(current_user) do
           = current_user.name
       %li.header-contents__content
-        新規投稿
+        = link_to new_review_path do
+          新規投稿
       %li.header-contents__content
         = link_to youtubes_index_path do
           youtube検索
