動的な写真投稿実装
２枚目以降の写真の投稿フォームをjqueryで実装

--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -1,9 +1,12 @@
 = form_for @review do |f|
-  タイトル名
+  商品名
   = f.text_field :title
-  説明
+  価格
   = f.text_field :description
-  写真
-  = f.fields_for :images do |i|
-    = i.file_field :src
+  #image-box
+    = f.fields_for :images do |image|
+      .js-file_group{"data-index" => "#{image.index}"}
+        = image.file_field :src, class: 'js-file'
+        %br/
+        %span.js-remove 削除
   = f.submit
