--- a/app/views/component/_header.html.haml
+++ b/app/views/component/_header.html.haml
@@ -25,7 +25,4 @@
         ログイン
       %li.header-contents__content
         新規登録
-  %p.notice
-    = notice
-  %p.alert
-    = alert 
+  = render "component/notifications"
