編集の追加

--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -6,4 +6,5 @@
     円
   - review.images.each do |image|
     = image_tag image.src.url
+= link_to '編集', edit_review_path(review)
 = link_to '削除', review_path(review), method: :delete
