--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -3,6 +3,9 @@
   = f.text_field :title
   説明
   = f.text_field :description
+  #star.form-group.row
+    = f.label :rate,'評価', class:'col-md-3 col-form-label'
+    = f.hidden_field :rate, id: :review_star
   #image-box
     #previews
       - if @review.persisted?
@@ -24,6 +27,12 @@
   = link_to root_path do
     トップへ
 
-
-
-
+:javascript
+  $('#star').raty({
+  size   : 36,
+  starOff: '#{asset_path('star-off.png')}',
+  starOn : '#{asset_path('star-on.png')}',
+  starHalf: '#{asset_path('star-half.png')}',
+  scoreName: 'review[rate]',
+  half: true,
+  }); 
