--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,45 @@
-<h2>Sign up</h2>
+<%= render "component/header"%>
 
+<div class="form-wrapper">
+<h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.label :name, class:"field__label" %><br />
+    <%= f.text_field :name, autofocus: true, class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :PSN_id %><br />
-    <%= f.text_field :PSN_id, autofocus: true %>
+    <%= f.label :PSN_id, class:"field__label" %><br />
+    <%= f.text_field :PSN_id, autofocus: true, class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :friend_code %><br />
-    <%= f.text_field :friend_code, autofocus: true %>
+    <%= f.label :friend_code, class:"field__label" %><br />
+    <%= f.text_field :friend_code, autofocus: true, class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, class:"field__label" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, class:"field__label" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class:"field__input" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation, class:"field__label" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"field__input" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class:"sign__btn" %>
   </div>
 <% end %>
-
-  <%= user_twitter_omniauth_authorize_path  do %>
-    Twitterログイン
-  <%end%>
-
-<%= render "devise/shared/links" %>
+</div>
