カテゴリー機能
投稿にカテゴリーを追加

--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -6,6 +6,11 @@
   #star.form-group.row
     = f.label :rate,'評価', class:'col-md-3 col-form-label'
     = f.hidden_field :rate, id: :review_star
+  = f.label :category, 'カテゴリ'
+  = f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category|
+    = category.label do
+      = category.check_box
+      = category.text
   #image-box
     #previews
       - if @review.persisted?
