--- a/app/assets/stylesheets/users/sign.scss
+++ b/app/assets/stylesheets/users/sign.scss
@@ -9,13 +9,11 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
 body {
-  background: #e9e9e9;
-  color: #5e5e5e;
   font: 400 87.5%/1.5em 'Open Sans', sans-serif;
 }
 
 .form-wrapper {
-  background: #fafafa;
+  background: white;
   margin: 0 auto;
   padding: 8rem 2em 4rem 4rem;
   max-width: 640px;
