showページに詳細を表示

--- a/app/views/reviews/show.html.haml
+++ b/app/views/reviews/show.html.haml
@@ -1,3 +1,25 @@
 = @review.title
 = @review.description
 = @review.rate
+%h4.mb-3
+  評価：#{@review.rate}点 | #{@review.title}
+%div{:id => "star-rate-#{@review.id}"}
+:javascript
+  $('#star-rate-#{@review.id}').raty({
+    size: 36,
+    starOff:  '#{asset_path('star-off.png')}',
+    starOn : '#{asset_path('star-on.png')}',
+    starHalf: '#{asset_path('star-half.png')}',
+    half: true,
+    readOnly: true,
+    score: #{@review.rate},
+  });
+
+- @review.categories.each do |category|
+  = category.name
+- @review.images.each do |image|
+  = image_tag image.src.url
+
+  = link_to root_path do
+    トップへ
+
