--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -1,33 +1,40 @@
 = form_for @review do |f|
-  タイトル名
-  = f.text_field :title
-  説明
-  = f.text_field :description
-  #star.form-group.row
-    = f.label :rate,'評価', class:'col-md-3 col-form-label'
-    = f.hidden_field :rate, id: :review_star
-  = f.label :category, 'カテゴリ'
-  = f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category|
-    = category.label do
-      = category.check_box
-      = category.text
-  #image-box
-    #previews
-      - if @review.persisted?
-        - @review.images.each_with_index do |image, i|
-          = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
-    = f.fields_for :images do |image|
-      .js-file_group{"data-index" => "#{image.index}"}
-        = image.file_field :src, class: 'js-file'
+  .sent-title
+    %h3 タイトル名
+    = f.text_field :title
+  .sent-description
+    %h3 説明
+    = f.text_field :description
+  #star
+    .sent-rate
+      %h3= f.label :rate,'評価', class:'col-md-3 col-form-label'
+      = f.hidden_field :rate, id: :review_star
+  .sent-category
+    %h3= f.label :category, 'カテゴリ'
+    = f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |category|
+      = category.label do
+        = category.check_box
+        = category.text
+  #image-box.sent-image
+    %h3 画像を設定
+    .sent-image__box
+      .sent-image__box__file
+        #previews
+        - if @review.persisted?
+          - @review.images.each_with_index do |image, i|
+            = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
+        = f.fields_for :images do |image|
+          .js-file_group{"data-index" => "#{image.index}"}
+            = image.file_field :src, class: 'js-file'
         %br/
-        %span.js-remove 削除
+      %span.js-remove 削除
       - if @review.persisted?
         = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
     - if @review.persisted?
       .js-file_group{"data-index" => "#{@review.images.count}"}
-        = file_field_tag :src, name: "product[images_attributes][#{@review.images.count}][src]", class: 'js-file'
+        = file_field_tag :src, name: "review[images_attributes][#{@review.images.count}][src]", class: 'js-file'
         .js-remove 削除
-  = f.submit
+  = f.submit 'レビューを投稿', class: 'btn'
 
   = link_to root_path do
     トップへ
