--- a/app/assets/stylesheets/review/new.scss
+++ b/app/assets/stylesheets/review/new.scss
@@ -18,9 +18,9 @@
       padding-top: 70px;
       cursor: pointer;
     }
+    &__src{
+      border-style: solid;
+      border-width: 0;
+    }
   }
-}
-
-.js-file{
-  display:none;
 }
