--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -23,6 +23,7 @@
           = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
     = f.fields_for :images do |image|
       .js-file_group{"data-index" => "#{image.index}"}
+        = icon('fas','image', class: 'icon')
         = image.file_field :src, class: 'js-file'
         %br/
       %span.js-remove 削除
