imageカラムの変更
srcカラムからimageへ

--- a/app/views/reviews/_form.html.haml
+++ b/app/views/reviews/_form.html.haml
@@ -1,10 +1,10 @@
 = form_for @review do |f|
   .sent-title
     %h3 タイトル名
-    = f.text_field :title
+    = f.text_field :title, class: "review-field"
   .sent-description
     %h3 説明
-    = f.text_field :description
+    = f.text_field :description, class: "review-field"
   #star
     .sent-rate
       %h3= f.label :rate,'評価', class:'col-md-3 col-form-label'
@@ -15,24 +15,18 @@
       = category.label do
         = category.check_box
         = category.text
-  #image-box
-    %h3 画像投稿
-    #previews
-      - if @review.persisted?
-        - @review.images.each_with_index do |image, i|
-          = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
-    = f.fields_for :images do |image|
-      .js-file_group{"data-index" => "#{image.index}"}
-        = icon('fas','image', class: 'icon')
-        = image.file_field :src, class: 'js-file'
-        %br/
-      %span.js-remove 削除
-      - if @review.persisted?
-        = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
-    - if @review.persisted?
-      .js-file_group{"data-index" => "#{@review.images.count}"}
-        = file_field_tag :src, name: "review[images_attributes][#{@review.images.count}][src]", class: 'js-file'
-        .js-remove 削除
+  .post__drop__box__container
+    .prev-content
+    .label-content
+      %label{for: "review_images_attributes_0_image", class: "label-box", id: "label-box--0"}
+        %pre.label-box__text-visible クリックしてファイルをアップロード
+    .hidden-content
+      = f.fields_for :images do |i|
+        = i.file_field :image, class: "hidden-field"
+        %input{class:"hidden-field", type: "file", name: "review[images_attributes][1][image]", id: "review_images_attributes_1_image" }
+        %input{class:"hidden-field", type: "file", name: "review[images_attributes][2][image]", id: "review_images_attributes_2_image" }
+        %input{class:"hidden-field", type: "file", name: "review[images_attributes][3][image]", id: "review_images_attributes_3_image" }
+        %input{class:"hidden-field", type: "file", name: "review[images_attributes][4][image]", id: "review_images_attributes_4_image" }
   = f.submit 'レビューを投稿', class: 'btn'
 
   = link_to root_path do
