--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -22,6 +22,6 @@
       - review.categories.each do |category|
         = category.name
       - review.images.each do |image|
-        = image_tag image.src.url
+        = image_tag image.image.url
 = link_to '編集', edit_review_path(review)
 = link_to '削除', review_path(review), method: :delete
