投稿のカード化
一覧ページでの表示変更

--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -1,27 +1,34 @@
-- @reviews.each do |review|
-  = link_to review_path(review) do
-    .content
-      %p
-        = review.title
-      %p
-        = review.description
-      %h4.mb-3
-        評価：
-        = review.rate
-      %div{:id => "star-rate-#{review.id}"}
-      :javascript
-        $('#star-rate-#{review.id}').raty({
-          size: 36,
-          starOff:  '#{asset_path('star-off.png')}',
-          starOn : '#{asset_path('star-on.png')}',
-          starHalf: '#{asset_path('star-half.png')}',
-          half: true,
-          readOnly: true,
-          score: #{review.rate},
-        });
-      - review.categories.each do |category|
-        = category.name
+.card
+  - @reviews.each do |review|
+    = link_to review_path(review) do
+      .card-content
       - review.images.each do |image|
-        = image_tag image.image.url
-= link_to '編集', edit_review_path(review)
-= link_to '削除', review_path(review), method: :delete
+        = image_tag image.image.url, class:"card-content__image"
+        %h2.card-content__title
+          = review.title
+        %p.card-content__description
+          = review.description
+        %h4.card-content__rate
+          評価：
+          = review.rate
+        %div{:id => "star-rate-#{review.id}"}
+        :javascript
+          $('#star-rate-#{review.id}').raty({
+            size: 36,
+            starOff:  '#{asset_path('star-off.png')}',
+            starOn : '#{asset_path('star-on.png')}',
+            starHalf: '#{asset_path('star-half.png')}',
+            half: true,
+            readOnly: true,
+            score: #{review.rate},
+          });
+        %h4.card-content__category
+        - review.categories.each do |category|
+          = category.name
+      .btn-box
+        .edit-btn
+          = link_to '編集', edit_review_path(review)
+        .delete-btn
+          = link_to '削除', review_path(review), method: :delete
+      .card-user
+        = review.user.name
