画像の枚数調整
indexでは一枚のみ表示

--- a/app/assets/stylesheets/component/_header.scss
+++ b/app/assets/stylesheets/component/_header.scss
@@ -13,6 +13,9 @@
     display: flex;
     list-style: none;
     padding-left:240px;
+    a{
+      text-decoration: none;
+    }
     &__content{
       padding:16px;
       line-height: 80px;
