--- a/app/assets/stylesheets/review/_reviews.scss
+++ b/app/assets/stylesheets/review/_reviews.scss
@@ -11,12 +11,12 @@ h2{
 }
 
 .top {
-  background: image-url('game');
-  background-size: cover;
-  background-position: center top;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
+  // background: image-url('game');
+  // background-size: cover;
+  // background-position: center top;
+  // background-repeat: no-repeat;
+  // height: 100vh;
+  // width: 100%;
 }
 
 .genre{
