--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -33,6 +33,7 @@
             %a{:href => "https://www.ea.com/ja-jp/games/apex-legends", :target => "_blank", class:"game-img__image"}
               = image_tag asset_path("Apex.jpg", alt: "ゲーム画像7"),width: "300", height: '240'
           .game-img
+            %a{:href => "https://ubisoft.co.jp/r6s/", :target => "_blank", class:"game-img__image"}
               = image_tag asset_path("six.jpg", alt:"ゲーム画像8"),width: "300", height: '240'
           .game-img
             %a{:href => "https://www.smashbros.com/ja_JP/", :target => "_blank", class:"game-img__image"}
