kaminariページの設定

--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -5,6 +5,7 @@
       %h2 投稿一覧
       .review-wrapper
         = render @reviews
+  = paginate @reviews
   .genre-wrapper
     .container
       .heading
