投稿一覧ページ(仮)
投稿一覧ページのマークアップ(仮)

--- a/app/assets/stylesheets/review/_reviews.scss
+++ b/app/assets/stylesheets/review/_reviews.scss
@@ -16,7 +16,10 @@ h2{
   // background-position: center top;
   // background-repeat: no-repeat;
   // height: 100vh;
-  // width: 100%;
+	// width: 100%;
+	&-conteiner{
+		padding:80px;
+	}
 }
 
 .genre{
