--- a/app/assets/stylesheets/review/_index.scss
+++ b/app/assets/stylesheets/review/_index.scss
@@ -1,10 +1,11 @@
 .review{
+  padding-top:0.8rem;
   &-wrapper{
     display: grid;
     margin: 2rem 0 0;
-    padding: .8em;
+    padding: 0.7em;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: 1fr;
-    grid-gap: 2.5rem;
+    grid-gap: 1rem;
   }
 }
