--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -1,11 +1,11 @@
 = render "component/header"
 .top
-  .top-jambo
+  .top-conteiner
     .review
       %h2 投稿一覧
       .review-wrapper
         = render @reviews
-  = paginate @reviews
+    = paginate @reviews
   .genre-wrapper
     .container
       .heading
