--- a/app/views/reviews/show.html.haml
+++ b/app/views/reviews/show.html.haml
@@ -1,10 +1,33 @@
-    starHalf: '#{asset_path('star-half.png')}',
 = render "component/header"
 
-- @review.categories.each do |category|
-  = category.name
-- @review.images.each do |image|
-  = image_tag image.image.url
+.show-conteiner
+  .show
+    .show-box
+      .show-box__title
+        %h4 タイトル名
+        = @review.title
+      .show-box__image
+        %h4 画像
+        = image_tag @review.images[0].image.url, class:"show-box__image-src"
+        - @review.images.each do |image|
+          = image_tag image.image.url
+      .show-box__description
+        %h4 説明
+        = @review.description
+      .show-box__rate
+        %h4
+          評価：#{@review.rate}点
+      %div{:id => "star-rate-#{@review.id}"}
+      :javascript
+        $('#star-rate-#{@review.id}').raty({
+          size: 36,
+          starOff:  '#{asset_path('star-off.png')}',
+          starOn : '#{asset_path('star-on.png')}',
+          starHalf: '#{asset_path('star-half.png')}',
+          half: true,
+          readOnly: true,
+          score: #{@review.rate},
+        });
       .show-box__category
         %h4 カテゴリー
         - @review.categories.each do |category|
