--- a/app/views/reviews/show.html.haml
+++ b/app/views/reviews/show.html.haml
@@ -9,8 +9,9 @@
       .show-box__image
         %h4 画像
         = image_tag @review.images[0].image.url, class:"show-box__image-src"
-        - @review.images.each do |image|
-          = image_tag image.image.url
+        .show-box__image-srcs
+          - @review.images.each do |image|
+            = image_tag image.image.url, class:"show-box__image-srcs__list"
       .show-box__description
         %h4 説明
         = @review.description
