詳細ページ(仮)
詳細ページ完成(仮)

--- a/app/views/component/_header.html.haml
+++ b/app/views/component/_header.html.haml
@@ -1,7 +1,8 @@
 .header
   .header-nav
     %h1.app-name
-      Game review
+      = link_to root_path do
+        Game review
   -if user_signed_in?
     %ul.header-contents
       %li.header-contents__content
