--- a/app/assets/stylesheets/review/_show.scss
+++ b/app/assets/stylesheets/review/_show.scss
@@ -14,14 +14,14 @@
     overflow: hidden;
     box-shadow: 0 2px 6px #c1ced7;
     &__title{
+      padding:24px;
       font-size: 1.0rem;
-      padding-top: 10px;
-      margin-top: 0;
-      margin-bottom: 0;
+      margin: 0 auto;
       display: block;
       font-weight: bold;
     }
     &__image{
+      cursor: pointer;
       width: 800px;
       height: 100%;
       overflow: hidden;
@@ -51,19 +51,22 @@
       display: block;
       font-size: 1rem;
       margin: 0 auto;
-      padding-top: 20px;
+      padding:16px;
     }
     &__rate{
       display: block;
       font-size: 1rem;
       margin: 0 auto;
-      padding-top: 20px;
+      padding:16px;
     }
     &__category{
       display: block;
       font-size: 1rem;
       margin: 0 auto;
-      padding-top: 20px;
+      &__name{
+        color: #fff;
+        background-color: #343a40;
+      }
     }
   }
 }
