お気に入りボタンの配置

--- a/app/views/reviews/show.html.haml
+++ b/app/views/reviews/show.html.haml
@@ -11,6 +11,8 @@
           - @review.categories.each do |category|
             .show-box__category__name
               = category.name
+        %div{:id => "likes_buttons_#{@review.id}"}
+          = render partial: 'likes/like', locals: { review: @review, likes: @likes}
       .show-box__image
         %h4 画像
         = image_tag @review.images[0].image.url, class:"show-box__image-src"
