コメント欄の調整

--- a/app/assets/stylesheets/component/_btn.scss
+++ b/app/assets/stylesheets/component/_btn.scss
@@ -13,3 +13,9 @@
   background-color: rgb(205, 55, 50);
   border-radius: 0.3rem;
 }
+
+.comment-btn{
+  padding:0.5rem;
+  background-color: rgb(50, 148, 205);
+  border-radius: 0.3rem;
+}
