--- a/app/views/reviews/show.html.haml
+++ b/app/views/reviews/show.html.haml
@@ -36,22 +36,22 @@
       .show-box__description
         %h4 説明
         %p= @review.description
-      .comment-wrapper{:class => "border-top mb-10"}
-        %p.mt-5 コメント一覧
-        - @comments.each do |c|
-          %div
-            - unless c.user.blank?
-              %a{:href => "#{user_path(c.user_id)}"}= image_tag c.user.image.to_s, class:"rounded-circle icon_image mr-3 mb-3"
-            = c.user.name unless c.user.blank?
-            %br/
-            = c.content
+    .comment-wrapper
+      %p.mt-5 コメント一覧
+      - @comments.each do |c|
+        %div
+          - unless c.user.blank?
+            %a{:href => "#{user_path(c.user_id)}"}= image_tag c.user.image.to_s, class:"rounded-circle icon_image mr-3 mb-3"
+          = c.user.name unless c.user.blank?
           %br/
-        - if user_signed_in?
-          = form_with(model: [@review, @comment], local: true) do |f|
-            = f.text_area :content, class: "form-control", rows: 5
-            = button_tag type: "submit", class: "btn btn-success float-right mt-1" do
-              %i.far.fa-comments
-              コメントする
+          = c.content
+        %br/
+      - if user_signed_in?
+        = form_with(model: [@review, @comment], local: true) do |f|
+          = f.text_area :content, class: "form-control", rows: 5
+          = button_tag type: "submit", class: "comment-btn" do
+            %i.far.fa-comments
+            コメントする
 
 
 = link_to root_path do
