コメント調整

--- a/app/assets/stylesheets/component/comments.scss
+++ b/app/assets/stylesheets/component/comments.scss
@@ -7,6 +7,10 @@
   background: rgba(78, 72, 72, 0.8);
 }
 
+.comment-wrapper{
+  padding:1.5rem;
+}
+
 .comment-box{
   position: fixed;
   top: 60px;
