検索フォームの調整

--- a/app/assets/stylesheets/component/_header.scss
+++ b/app/assets/stylesheets/component/_header.scss
@@ -20,6 +20,9 @@
       padding:16px;
       line-height: 80px;
     }
+    &__search{
+      padding:16px;
+    }
   }
   .header-log{
     display: flex;
