--- a/app/assets/stylesheets/review/_search.scss
+++ b/app/assets/stylesheets/review/_search.scss
@@ -54,4 +54,31 @@
   }
 }
 
+.review_search{
+  display:flex;
+}
 
+.index-search{
+  width:30%;
+  margin:0 auto;
+  &__box{
+    margin-top: 10px;
+    padding-left: 10px;
+    height: 50px;
+    width: 100%;
+    font-size: 18px;
+    background-color: white;
+    border: solid 1px gray;
+    border-radius: 10px;
+  }
+  &__btn{
+    margin-top: 10px;
+    background-color: #3CCACE;
+    border: solid 1px #3CCACE;
+    border-radius: 0.6rem;
+    width: 30%;
+    font-size: 20px;
+    height:50px;
+    color:white;
+  }
+}
